--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Meus Numeros da Sorte</string>
+    <string name="cancel">cancelar</string>
+    <string name="ok">ok</string>
 </resources>
